--- a/learn-certs-pr/exams/az-900.yml
+++ b/learn-certs-pr/exams/az-900.yml
@@ -8,14 +8,12 @@ displayName: AZ-900
 summary: |-
   <div>
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
-  <div><strong>Содержание этого экзамена было обновлено 28 мая 2020 года. Пожалуйста, загрузите документ оценки навыков ниже, чтобы увидеть, что изменилось.</strong><br/><br/></div>
+  <div><strong>Содержание этого экзамена будет обновлено 15 сентябре 2020 года. Пожалуйста, загрузите документ с оцениваемыми навыками ниже, чтобы узнать, что изменится.</strong><br/><br/></div>
   </div>
 
-  Кандидаты на этот экзамен должны иметь базовые знания облачных служб и того, как эти службыы предоставляются в Microsoft Azure.
+  Кандидаты на этот экзамен должны иметь базовые знания облачных служб и того, как эти службы предоставляются в Microsoft Azure. Экзамен рассчитан на кандидатов, которые только начинают работать с облачными решениями и службами или плохо знакомы с Azure.
 
-  Экзамен по основам Azure - это возможность подтвердить знания облачных концепций, основных служб Azure, ценообразования Azure, SLA и жизненного цикла, а также основ облачной безопасности, конфиденциальности, соответствия и доверия.
-
-  Этот экзамен предназначен для людей, начинающих работать с облачными решениями и службами. Кандидаты должны быть в состоянии продемонстрировать фундаментальные знания облачных концепций, а также служб Azure, рабочих нагрузок, безопасности, конфиденциальности, цен и поддержки. Кроме того, вы должны быть знакомы с концепциями работы в сети, хранения, вычислений, поддержки и разработки приложений.
+  Экзамен по основам Azure позволяет подтвердить знания облачных концепций, служб Azure, рабочих нагрузок Azure, безопасности и конфиденциальности в Azure, а также процессов ценообразования и поддержки в Azure. Кандидаты должны быть знакомы с общими концепциями технологий, включая концепции сетей, хранения, вычислений, поддержки приложений и разработки приложений.
 
   Основы Azure можно использовать для подготовки к получению других ролевых или специальных сертификатов Azure, но это не является обязательным условием для любого из них.
 subTitle: 'Этот экзамен позволяет оценить вашу способность понимать следующие концепции: концепции облачных вычислений, основные службы Azure, концепции облачной безопасности, конфиденциальности, соответствия требованиям и доверия, а также цены и поддержку Azure.'
@@ -28,7 +26,7 @@ providers:
 - providerType: certiport
   examUrl: http://www.certiport.com/locator
 - providerType: gsi
-  examUrl: https://docs.microsoft.com/learn/certifications/skillingoffer
+  examUrl: https://examregistration.microsoft.com/?locale=ru-ru&examcode=AZ-900&provider=psi&examname=Exam%20AZ-900:%20Microsoft%20Azure%20Fundamentals&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-900
 locales:
 - en
 - ja
@@ -40,7 +38,7 @@ locales:
 levels:
 - beginner
 skills:
-- Содержание этого экзамена было обновлено 28 мая 2020 года. Пожалуйста, загрузите схему навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что изменилось.
+- Содержание этого экзамена будет обновлено 15 сентябре 2020 года. Пожалуйста, скачайте список навыков, оцениваемых на экзамене, ниже, чтобы увидеть, что меняется.
 - Описание облачных концепций (15-20%)
 - Описание основных служб Azure (30-35%)
 - Описание безопасности, конфиденциальности, соответствия и доверия (25-30%)
