--- a/learn-certs-pr/azure-fundamentals.yml
+++ b/learn-certs-pr/azure-fundamentals.yml
@@ -8,11 +8,9 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-fundamentals-badg
 summary: |-
   <div><font color='red'><strong>Ввиду ситуации с распространением коронавируса (COVID-19) компания Microsoft вносит некоторые временные изменения в свою программу обучения и сертификации. <a href='https://www.microsoft.com/en-us/learning/community-blog-post.aspx?BlogId=8&amp;Id=375289'>Узнать больше</a>.</strong></font><br/><br/></div>
 
-  Кандидаты на сертификацию по основам Azure должны обладать базовыми знаниями об облачных службах и о том, как эти службы предоставляются в Microsoft Azure.
+  Кандидаты на сертификацию по основам Azure должны обладать базовыми знаниями об облачных службах и о том, как эти службы предоставляются в Microsoft Azure. Эта сертификация предназначена для кандидатов, которые только начинают работать с облачными решениями и службами или плохо знакомы с Azure.
 
-  Сертификация Azure Fundamentals - это возможность подтвердить знания облачных концепций, основных служб Azure, цен Azure, SLA и жизненного цикла, а также основ облачной безопасности, конфиденциальности, соответствия и доверия.
-
-  Эта сертификация предназначена для людей, начинающих работать с облачными решениями и службами. Кандидаты должны быть в состоянии продемонстрировать фундаментальные знания облачных концепций, а также служб Azure, рабочих нагрузок, безопасности, конфиденциальности, цен и поддержки. Кроме того, вы должны быть знакомы с концепциями работы в сети, хранения, вычислений, поддержки и разработки приложений.
+  Сертификация Azure Fundamentals позволяет подтвердить знания облачных концепций, служб Azure, рабочих нагрузок Azure, безопасности и конфиденциальности в Azure, а также процессов ценообразования и поддержки в Azure. Кандидаты должны быть знакомы с общими концепциями технологий, включая концепции сетей, хранения, вычислений, поддержки приложений и разработки приложений.
 
   Основы Azure можно использовать для подготовки к получению других ролевых или специальных сертификатов Azure, но это не является обязательным условием для любого из них.
 subTitle: Сертификат “Основы Azure” подтверждает базовые знания облачных служб и того, как эти службы предоставляются с помощью Microsoft Azure.
